# saxpy_simd

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  README.md  main.cpp
results/: no-vectorizeO2_results.csv  no-vectorize_results.csv  vectorizeO2_results.csv  vectorize_results.csv
src/: consts.hh  gnuplot.h  kernals.cc  kernals.hh  main.cc  scoped_timer.cc  scoped_timer.hh  utils.cc  utils.hh
